# OCR4game

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/worktrees/agent-a48bdae6decc1cb03/docs/: README.md  WORKFLOW.md
.claude/worktrees/agent-a48bdae6decc1cb03/tests/: test_app.py  test_config.py  test_registry.py  test_threshold.py
.claude/worktrees/agent-a6052c49e9758325a/tests/: test_asset_sync.py  test_roi.py  test_threshold_cli.py  test_workflow_actions.py
.claude/worktrees/agent-a7ba40eadd74404a9/: README.md
.claude/worktrees/agent-a7ba40eadd74404a9/docs/: CLI.md  README.md  diagnostics.md
.claude/worktrees/agent-a7ba40eadd74404a9/tests/: test_anchor_eval_tool.py  test_content_conditions.py  test_content_eval.py  test_content_extractor.py  test_content_model.py  test_recognize_tool.py  test_report_tool.py  test_trace_logger.py  test_workflow_engine.py
.github/workflows/: ci.yml
configs/: README.md
configs/games/star_rail/: profile.yaml
configs/games/star_rail/assets/: README.md
docs/: ADDING_A_GAME.md  ARCHITECTURE.md  CLI.md  TROUBLESHOOTING.md  USAGE.md
src/ocr4game/: app.py  config.py  resources.py  validation.py
src/ocr4game/games/: __init__.py  base.py  registry.py
src/ocr4game/perception/: __init__.py  content.py  diagnostics.py  fusion.py  ocr_eval.py  screen_state.py  template.py
src/ocr4game/platform/: __init__.py  capture.py  input_win.py  window.py
src/ocr4game/runtime/: binding.py
src/ocr4game/tools/: annotate.py  asset_sync.py  import_screenshots.py  lint.py  recognize.py  threshold.py  threshold_tune.py
src/ocr4game/workflow/: __init__.py  context.py  engine.py  errors.py  lint.py  semantics.py  vars.py
tests/: test_annotate_tool.py  test_asset_sync.py  test_config.py  test_fixture_regression.py  test_ocr_anchor_eval.py  test_replay_tool.py  test_screen_state.py  test_validation.py  test_window.py  test_workflow_engine.py  test_workflow_lint.py  test_workflow_trace_integration.py  test_workflow_vars.py
tests/fixtures/: README.md  generate_star_rail.py
tests/fixtures/star_rail/: manifest.yaml
(+58 files in other folders)
